# FingerPrintLockNew

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
common/OTA/: CMakeLists.txt  app_OTA.c  app_OTA.h
common/wifi/: CMakeLists.txt  app_http_server.cpp  app_http_server.h
components/arduino/: CMakeLists.txt
data/: index.html
main/: CMakeLists.txt  finger_run.cpp  finger_run.h  http_request.c  http_request.h  main.cpp
